--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
 
 		<div id="keyboard"></div>
 		
+		<br>
+		<br>
+		<button id="stop">STOP!</button>
+		<br><br>
 
-		<button>LFO ON</button>
+		<input type="text" id="playNotesVal" value="gfefgg-fff-gbb-gfefggggffgfe---">
+		<button id="playNotes">play notes</button>
+		<br>
+		<br>
 		
+		<p>Tempo:</p>
+		<input class="tempoSlider" type="range" name="points" min="1" max="5">
+
 		<p>Attack:</p>
 		<input class="attackSlider" type="range" name="points" min="2" max="200">
 
