starting to make the pads

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 		
 		<br>
 		<br>
-		<button id="stop">STOP!</button>
-		<br><br>
+	
 
 		<input type="text" id="playNotesVal" value="gfefgg-fff-gbb-gfefggggffgfe---">
-		<button id="playNotes">play notes</button>
+		<button id="playNotes">play notes</button> <button id="stop">STOP!</button>
 		<br>
 		<br>
 		
@@ -38,6 +37,12 @@
 		<p>Decay:</p>
 		<input class="decaySlider" type="range" name="points" min="12" max="200">
 
+		<div class="pads">
+			<div id="padOne">pad 1</div>
+			<div id="padTwo"></div>
+			<div id="padThree"></div>
+			<div id="padFour"></div>
+		</div>
 
 		<script src="qwerty-hancock.js"></script>
 	</body>
