got first two columns of pads working

--- a/index.html
+++ b/index.html
@@ -37,11 +37,21 @@
 		</div>
 
 		<div class="pads">
-			<p>first note:</p>
-			<div id="padOne" class="highlighted">A</div>
-			<div id="padTwo">B</div>
-			<div id="padThree">C</div>
-			<div id="padFour">D</div>
+			<div class="firstCol">
+				<p>first note:</p>
+				<div id="padOne" class="highlighted">A</div>
+				<div id="padTwo">B</div>
+				<div id="padThree">C</div>
+				<div id="padFour">D</div>
+			</div>
+
+			<div class="secondCol">
+				<p>second note:</p>
+				<div id="padFive" class="highlighted">A</div>
+				<div id="padSix">B</div>
+				<div id="padSeven">C</div>
+				<div id="padEight">D</div>
+			</div>
 		</div>
 
 		
