got all 4 pads working

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<div class="pads">
-			<div class="firstCol">
+			<div class="noteCol firstCol">
 				<p>first note:</p>
 				<div id="padOne" class="highlighted">A</div>
 				<div id="padTwo">B</div>
@@ -45,12 +45,26 @@
 				<div id="padFour">D</div>
 			</div>
 
-			<div class="secondCol">
+			<div class="noteCol secondCol">
 				<p>second note:</p>
 				<div id="padFive" class="highlighted">A</div>
 				<div id="padSix">B</div>
 				<div id="padSeven">C</div>
 				<div id="padEight">D</div>
+			</div>
+			<div class="noteCol thirdCol">
+				<p>second note:</p>
+				<div id="padNine" class="highlighted">A</div>
+				<div id="padTen">B</div>
+				<div id="padEleven">C</div>
+				<div id="padTwelve">D</div>
+			</div>
+			<div class="noteCol thirdCol">
+				<p>second note:</p>
+				<div id="padThirteen" class="highlighted">A</div>
+				<div id="padFourteen">B</div>
+				<div id="padFifteen">C</div>
+				<div id="padSixteen">D</div>
 			</div>
 		</div>
 
