got tempo working

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<div class="controls">
 		<!-- 		<input type="text" id="playNotesVal" value="gfefgg-fff-gbb-gfefggggffgfe---">
  -->		
-			<button id="playNotes">play notes</button> <button id="stop">STOP!</button>
+			<button id="playNotes">PLAY</button> <button id="stop">STOP</button>
 			<br>
 			<br>
 			<p>Tempo:</p>
-			<input class="tempoSlider" type="range" name="points" min="1" max="5">
+			<input class="tempoSlider" type="range" name="points" min="1" max="10">
 
 			<p>Attack:</p>
 			<input class="attackSlider" type="range" name="points" min="2" max="200">
