got tempo working2

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 			<button id="playNotes">PLAY</button> <button id="stop">STOP</button>
 			<br>
 			<br>
-			<p>Tempo:</p>
-			<input class="tempoSlider" type="range" name="points" min="1" max="10">
+			<p>Tempo: <span class="tempoVal"></span></p>
+			<input class="tempoSlider" type="range" name="points" min="1" max="10"> 
 
-			<p>Attack:</p>
+			<p>Attack: <span class="attackVal"></span></p>
 			<input class="attackSlider" type="range" name="points" min="2" max="200">
 
 			<p>Decay:</p>
