--- a/index.html
+++ b/index.html
@@ -26,60 +26,81 @@
 			<button id="playNotes">PLAY</button> <button id="stop">STOP</button>
 			<br>
 			<br>
-			<p>Tempo: <span class="tempoVal"></span></p>
-			<input class="tempoSlider" type="range" name="points" min="1" max="10"> 
+			<p class="controlLabel">Tempo: <span class="tempoVal"></span></p>
+			<input class="tempoSlider" type="range" name="points" min="2" max="7" step=".1"> 
 
-			<p>Attack: <span class="attackVal"></span></p>
+			<p class="controlLabel">Osc 2 Freq:</p>
+				<p class="intervalSelector">
+					<span id="octaveInterval" value="2">octave,</span>
+					<span id="fourthInterval" value="1.3333">fourth,</span>
+					<span id="fifthInterval" class="oscFreqSelected" value="1.5">fifth,</span>
+					<span id="minorThirdInterval" value="1.2">minor third</span></p>
+			<br>
+
+			<p class="controlLabel">Attack: <span class="attackVal"></span></p>
 			<input class="attackSlider" type="range" name="points" min="2" max="200">
 
-			<p>Decay:</p>
+			<p class="controlLabel">Decay:</p>
 			<input class="decaySlider" type="range" name="points" min="12" max="200">
 
-			<p>Filter Freq:</p>
+			<p class="controlLabel">Filter Freq:</p>
 			<input class="filterSlider" type="range" name="points" min="100" max="4000">			
 
-			<p>Filter Res:</p>
+			<p class="controlLabel">Filter Res:</p>
 			<input class="filterQSlider" type="range" name="points" min="0" max="100">						
-			<p>Distortion:</p>
+			<p class="controlLabel">Distortion:</p>
 			<input class="distortionSlider" type="range" name="points" min="0" max="2000" defaultValue="100">		
 		</div>
 
 		<div class="pads">
-			<div class="noteCol firstCol" id="firstCol">
+			<div class="noteCol firstCol" id="firstCol" value="0">
 				<div class="colCounter colCounterHighlighted"></div>
 				<p>first note:</p>
-				<div id="padOne" class="highlighted">A</div>
-				<div id="padTwo">B</div>
-				<div id="padThree">C</div>
-				<div id="padFour">D</div>
+				<div id="padOne" class="highlighted" row="0">A</div>
+				<div id="padTwo" row="1">B</div>
+				<div id="padThree" row="2">C</div>
+				<div id="padFour" row="3">D</div>
 			</div>
 
-			<div class="noteCol secondCol" id="secondCol">
+			<div class="noteCol secondCol" id="secondCol"  value="1">
 				<div class="colCounter"></div>
 				<p>second note:</p>
-				<div id="padFive" class="highlighted">A</div>
-				<div id="padSix">B</div>
-				<div id="padSeven">C</div>
-				<div id="padEight">D</div>
+				<div id="padFive" class="highlighted" row="0">A</div>
+				<div id="padSix" row="1">B</div>
+				<div id="padSeven" row="2">C</div>
+				<div id="padEight" row="3">D</div>
 			</div>
 			<div class="noteCol thirdCol">
 				<div class="colCounter"></div>
 				<p>second note:</p>
-				<div id="padNine" class="highlighted">A</div>
-				<div id="padTen">B</div>
-				<div id="padEleven">C</div>
-				<div id="padTwelve">D</div>
+				<div id="padNine" class="highlighted" row="0">A</div>
+				<div id="padTen" row="1">B</div>
+				<div id="padEleven" row="2">C</div>
+				<div id="padTwelve" row="3">D</div>
 			</div>
 			<div class="noteCol fourthCol">
 				<div class="colCounter"></div>
 				<p>second note:</p>
-				<div id="padThirteen" class="highlighted">A</div>
-				<div id="padFourteen">B</div>
-				<div id="padFifteen">C</div>
-				<div id="padSixteen">D</div>
+				<div id="padThirteen" class="highlighted" row="0">A</div>
+				<div id="padFourteen" row="1">B</div>
+				<div id="padFifteen" row="2">C</div>
+				<div id="padSixteen" row="3">D</div>
 			</div>
 		</div>
 
+		<div class="padsTwo">
+			<div class="noteCol firstCol">
+				
+			</div>
+			
+		</div>
+
+		<section id="sp">
+		    <div id="pad1" data-sound="kick.wav"></div>
+		    <div id="pad2" data-sound="snare.wav"></div>
+		    <div id="pad3" data-sound="tin.wav"></div>
+		    <div id="pad4" data-sound="hat.wav"></div>
+		</section>
 		
 
 
