--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-		<title>testing</title>
+		<title>ChimSynth2000</title>
 
 		<!-- Meta Tags -->
 		<meta charset="utf-8"/>
@@ -16,6 +16,8 @@
 	
 	</head>
 	<body>
+
+	<h1>ChimSynth2000!!!</h1>
 
 		<div id="keyboard"></div>
 
